--- a/test2.htm
+++ b/test2.htm
@@ -74,5 +74,14 @@ function mmLoadMenus() {
 <area shape="rect" coords="168,9,227,21" href="#" alt="" onMouseOut="MM_startTimeout();"  onMouseOver="MM_showMenu(window.mm_menu_0816115830_0,169,22,null,'test2');"  >
 <area shape="rect" coords="87,9,142,21" href="#" alt="" onMouseOut="MM_startTimeout();"  onMouseOver="MM_showMenu(window.mm_menu_0816115546_1,88,25,null,'test2');"  >
 </map>
-</body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48651413-1', 'bedrockstoneanddesign.com');
+  ga('send', 'pageview');
+
+</script></body>
 </html>
